--- a/.jshintrc
+++ b/.jshintrc
@@ -14,5 +14,9 @@
   "undef": true,
   "strict": false,
   "trailing": true,
-  "smarttabs": true
+  "smarttabs": true,
+  "jquery": true,
+  "globals" : {
+    "_": false
+  }
 }
