--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "centro-jekyll",
+  "name": "centro.cx",
   "version": "0.0.0",
   "dependencies": {
     "bootstrap-sass-official": "~3.2.0",
