--- a/.magnum.yml
+++ b/.magnum.yml
@@ -1,9 +1,7 @@
 ruby: 1.9.3
 
-before_install:
-  - sudo gem install
-
 install:
+  - sudo bundle install
   - sudo npm install grunt-cli bower -g
   - sudo npm install
   - sudo bower install
