add preloader with queryloader2 plugin.

--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "bootstrap-sass-official": "~3.2.0",
     "lodash": "~3.3.1",
-    "preload": "https://gist.github.com/4360344.git"
+    "preload": "https://gist.github.com/4360344.git",
+    "queryloader2": "~3.0.15"
   }
 }
