--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-wiredep": "^1.7.0",
     "jshint-stylish": "~0.4.0",
     "load-grunt-tasks": "~0.6.0",
+    "lodash": "^3.10.0",
     "time-grunt": "~0.4.0"
   },
   "engines": {
