--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "bootstrap-sass-official": "~3.2.0",
     "lodash": "~3.3.1",
     "preload": "https://gist.github.com/4360344.git",
-    "queryloader2": "~3.0.15"
+    "queryloader2": "~3.0.15",
+    "hammerjs": "~2.0.4"
   }
 }
